syntax = "proto3";

package files;
option go_package = "./gen/filespb";

// ------------------------------
// File Metadata Model
// ------------------------------
message File {
  string id = 1;
  string owner_id = 2;
  string filename = 3;
  int64 size = 4;
  string mime_type = 5;
  string storage_path = 6;
  bool is_public = 7;
  string created_at = 8;
}

// ------------------------------
// REQUEST TO GET PRESIGNED URL FOR UPLOAD
// ------------------------------
message GenerateUploadURLRequest {
  string owner_id = 1;
  string filename = 2;
  int64 size = 3;
  string mime_type = 4;
  bool is_public = 5;
}

// RESPONSE CONTAINING URL + KEY
message GenerateUploadURLResponse {
  string upload_url = 1;
  string storage_path = 2;     // S3 key
  string file_id = 3;          // Metadata ID (created before upload)
}

// ------------------------------
// CONFIRM UPLOAD AFTER CLIENT FINISHED PUT TO S3
// ------------------------------
message ConfirmUploadRequest {
  string file_id = 1;
}

message ConfirmUploadResponse {
  File file = 1;
}

// ------------------------------
// GENERATE PRESIGNED URL FOR DOWNLOAD
// ------------------------------
message GenerateDownloadURLRequest {
  string file_id = 1;
  int64 expire_seconds = 2;
}

message GenerateDownloadURLResponse {
  string download_url = 1;
  int64 expire_seconds = 2;
}

// ------------------------------
// LIST FILES FOR USER
// ------------------------------
message FileListRequest {
  string owner_id = 1;
}

message FileListResponse {
  repeated File files = 1;
}

// ------------------------------
// DELETE FILE + METADATA
// ------------------------------
message DeleteFileRequest {
  string file_id = 1;
}

message DeleteFileResponse {
  string message = 1;
}

// ------------------------------
// FILE SERVICE RPC
// ------------------------------
service FileService {
  // Uploading
  rpc GenerateUploadURL (GenerateUploadURLRequest) returns (GenerateUploadURLResponse);
  rpc ConfirmUpload (ConfirmUploadRequest) returns (ConfirmUploadResponse);

  // Downloading
  rpc GenerateDownloadURL (GenerateDownloadURLRequest) returns (GenerateDownloadURLResponse);

  // Management
  rpc ListFiles (FileListRequest) returns (FileListResponse);
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
}
